--- a/src/style.css
+++ b/src/style.css
@@ -45,16 +45,24 @@ form {
     line-height: 20px;
     color: #272044;
 }
-
+.hint {
+    line-height: 1.5;
+    margin-top: 5px;
+    opacity: 0.6;
+    font-size: 12px;
+}
 .submit-button {
     margin-left: 10px;
     background: #885df1;
-    color: white;
+    color: rgb(126, 33, 248);
     border: none;
-    width: 100px;
+    width: 80px;
     font-size: 16px;
-    border-radius: 30px;
-    padding: 14px 24px;
+    border-radius: 60px;
+    padding: 18px 24px;
+}
+.hidden {
+    display: none;
 }
 
 .poem {
@@ -74,4 +82,20 @@ footer {
     text-align: center;
     font-size: 13px;
     margin-top: 30px;
+}
+
+.generating {
+    animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
+}
+
+@-webkit-keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
 }
